--- a/admin/dashboard.html
+++ b/admin/dashboard.html
@@ -9,6 +9,8 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="stylesheet" href="../css/style.css">
+
 
     <title>Raport</title>
 </head>
@@ -85,10 +87,10 @@
                         </tr>
                     </tbody>
                 </table>
-                <form action="pokoje.php" enctype="multipart/form-data" method="POST" class="text-white d-flex justify-content-between align-items-center">
+                <form action="addOffer.php" enctype="multipart/form-data" method="POST" class="text-white d-flex justify-content-between align-items-center">
                     <div class="forms">
                         <p>Nazwa: <input type="text" name="name" id="room" placeholder="Nazwa" required></p>
-                        <p>Zdjęcie: <input type="file" name="photo_room" id="photo_room" required></p>
+                        <p>Zdjęcie: <input type="file" name="photo" id="photo_room" required></p>
                         <div class="mt-3">
                             Pokoje: <select name="type" id="pokoj">
                                 <option value="" disabled>Pokój</option>
@@ -97,6 +99,7 @@
                                 <option value="czteroosobowy">czteroosobowy</option>
                             </select>
                         </div>
+                        <input type="text" name="submitType" class="hidden-input"  id="room" placeholder="Nazwa" required value="room">
                     </div>
                     <button class="btn btn-success">Dodaj</button>
                 </form>
@@ -128,12 +131,13 @@
                         </tr>
                     </tbody>
                 </table>
-                <form action="" enctype="multipart/form-data" method="POST" class="text-white d-flex justify-content-between align-items-center">
+                <form action="addOffer.php" enctype="multipart/form-data" method="POST" class="text-white d-flex justify-content-between align-items-center">
                     <div class="forms">
-                        <p>Nazwa: <input type="text" name="apartment" id="apartment" placeholder="Nazwa" required></p>
-                        <p>Zdjęcie: <input type="file" name="photo_apartment" id="photo_apartment" required></p>
+                        <p>Nazwa: <input type="text" name="name" id="apartment" placeholder="Nazwa" required></p>
+                        <p>Zdjęcie: <input type="file" name="photo" id="photo_apartment" required></p>
+                        <input type="text" name="submitType" class="hidden-input"  id="room" placeholder="Nazwa" required value="apartments">
                         <div class="mt-3">
-                            Apartamenty: <select name="pokoj" id="pokoj">
+                            Apartamenty: <select name="type" id="pokoj">
                                 <option value="" disabled>Apartament</option>
                                 <option value="dla_dwojga">dla dwojga</option>
                                 <option value="z_barem">Z mini barem</option>
@@ -171,12 +175,13 @@
                         </tr>
                     </tbody>
                 </table>
-                <form action="" enctype="multipart/form-data" method="POST" class="text-white d-flex justify-content-between align-items-center">
+                <form action="addOffer.php" enctype="multipart/form-data" method="POST" class="text-white d-flex justify-content-between align-items-center">
                     <div class="forms">
-                        <p>Nazwa: <input type="text" name="apartment" id="apartment" placeholder="Nazwa" required></p>
-                        <p>Zdjęcie: <input type="file" name="photo_apartment" id="photo_apartment" required></p>
+                        <p>Nazwa: <input type="text" name="name" id="apartment" placeholder="Nazwa" required></p>
+                        <p>Zdjęcie: <input type="file" name="photo" id="photo_apartment" required></p>
+                        <input type="text" name="submitType" class="hidden-input" id="room" placeholder="Nazwa" required value="conference">
                         <div class="mt-3">
-                            Sale konferencyjne: <select name="pokoj" id="pokoj">
+                            Sale konferencyjne: <select name="type" id="pokoj">
                                 <option value="" disabled>Sale konferencyjne</option>
                                 <option value="z_telewizorem">Z telewizorem</option>
                                 <option value="z_tablica">Z tablicą interaktywną</option>
