--- a/index.html
+++ b/index.html
@@ -18,14 +18,39 @@
 
 <body>
 <!--navbar-->
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light bg-light" style="border-bottom: 1px solid #a3a9ad;">
+        <!-- <a class="navbar-brand" href="/inz/index.html">Hotel</a> -->
+        <a class="navbar-brand" href="/inz/index.html"><img src="logos/logo.png" alt="offer"></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" onclick="smoothScroll('#offer')">Oferta</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" onclick="smoothScroll('#fun')">Rozrywka</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" onclick="smoothScroll('footer')">Kontakt</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" onclick="smoothScroll('#us')">O nas</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
     <!-- <a class="navbar-brand" href="/inz/index.html">Hotel</a> -->
     <a class="navbar-brand" href="/inz/index.html"><img src="logos/logo.png" alt="offer"></a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav1"
+            aria-controls="navbarNav1" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
+    <div class="collapse navbar-collapse" id="navbarNav1">
         <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
                 <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
@@ -38,6 +63,9 @@
             </li>
             <li class="nav-item">
                 <a class="nav-link" onclick="smoothScroll('footer')">Kontakt</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" onclick="smoothScroll('#us')">O nas</a>
             </li>
         </ul>
     </div>
@@ -145,7 +173,7 @@
     <div class="container">
         <div class="row">
             <div class="col-12">
-                <h1 class="text-center p-4 mb-3 mt-4">Trochę o nas</h1>
+                <h1 class="text-center p-4 mb-2 mt-4">Trochę o nas</h1>
             </div>
         </div>
         <p style="text-indent: 5%; text-align:justify; margin-bottom: 40px;">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
