--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light" style="border-bottom: 1px solid #a3a9ad;">
         <!-- <a class="navbar-brand" href="/inz/index.html">Hotel</a> -->
         <a class="navbar-brand" href="/inz/index.html"><img src="logos/logo.png" alt="offer"></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
@@ -43,32 +44,6 @@
                 </li>
             </ul>
         </div>
-    </nav>
-    <!-- <a class="navbar-brand" href="/inz/index.html">Hotel</a> -->
-    <a class="navbar-brand" href="/inz/index.html"><img src="logos/logo.png" alt="offer"></a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav1"
-            aria-controls="navbarNav1" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav1">
-        <ul class="navbar-nav ml-auto">
-            <li class="nav-item active">
-                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" onclick="smoothScroll('#offer')">Oferta</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" onclick="smoothScroll('#fun')">Rozrywka</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" onclick="smoothScroll('footer')">Kontakt</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" onclick="smoothScroll('#us')">O nas</a>
-            </li>
-        </ul>
-    </div>
 </nav>
 <!--navbar-->
 <!--header-->
@@ -244,7 +219,7 @@
                     <i class="fa fa-envelope-o pr-4" style="font-size:24px"></i> hotel@hotel.pl
                 </p>
                 <p>
-                    <i class="fa fa-home pr-4" style="font-size:24px"></i> Ul. Polna 44, 81-111 Warszawa
+                    <i class="fa fa-home pr-4" style="font-size:24px"></i> Ul. Polna 44, 81-111 Rumia
                 </p>
             </div>
         </div>
